tests/NormalTests/paczka1/small_fuzzy/28375287.err
Error in line 1: h3rL S479 44,6
Error in line 5: p3drn9OA A825 69,0
Error in line 12: p3drn9OA S496 86,5
Error in line 14: A825 S496 01,4
Error in line 13: p3drn9OA A825 75,9
